fix white space bug

--- a/src/App.css
+++ b/src/App.css
@@ -52,6 +52,7 @@ textarea:focus {
   flex-direction: column;
   justify-content: space-between;
   align-items: left;
+  white-space: pre-wrap;
 }
 
 .note-footer {
